# game-competitor-analysis-poc

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  schema.sql  vercel.json
.claude/: settings.json  settings.local.json
.lingo/: glossary.json
.omc/: project-memory.json
.omc/state/: agent-replay-56cb6530-cc4b-4b6e-9b80-fabe43fcfa28.jsonl  agent-replay-5c5cbc7e-e4e0-48b6-ae1c-d42cd8af3245.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
api/: index.py  requirements.txt
docs/: architecture.md  cli-guide.md  conversation.md  cs-triage-automation-design.md  floating-seat-deep-dive.md  implementation-deep-dive.md  implementation.md  interview-technical-challenges.md  not-done.md  plan-status.md  plan.md  presentation-script.md  presentation.pptx  presentation_02.pptx  product-guide.md  progress-2026-04-18.md  service-architecture.md  면접_예상질문_모범답안.md
docs/submission/: RUNBOOK.md  submission.pptx  vibe-coding-prompts.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build_deck.py  build_submission_deck.py
src/gca/: __init__.py  cli.py  config.py  db.py  logs.py  models.py
src/gca/api/: server.py
src/gca/collectors/: __init__.py  appstore.py  base.py  itch.py  playstore.py  steam.py
src/gca/engine/: features.py  similarity.py  weak_labels.py  weight_tuner.py
src/gca/pipeline/: cache.py  (+6 more)
tests/: test_normalize.py
tests/fixtures/: gold_features.yaml
web/: package-lock.json  package.json
web/app/: AddMyGameForm.tsx  globals.css  layout.tsx  page.tsx
web/lib/: api.ts
(+18 files in other folders)
