[project]
name = "gca"
version = "0.1.0"
description = "Automated game competitor discovery and weekly report pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "anthropic>=0.39",
    "sentence-transformers>=3.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.11",
]
scrapers = [
    "google-play-scraper>=1.2.7",
]

[project.scripts]
gca = "gca.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gca"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
